# lightdock-rust

./: .gitignore  Cargo.toml  README.md
data/: add_dummy_trp.py
example/1azp/: gso_1.out  gso_10.out  gso_100.out  gso_20.out  gso_30.out  gso_40.out  gso_50.out  gso_60.out  gso_70.out  gso_80.out  gso_90.out  lig_nm.npy  lightdock_dna_mask.npy  lightdock_lig.nm.npy  lightdock_protein_mask.npy  lightdock_rec.nm.npy  rec_nm.npy  setup.json
example/1azp/swarm_0/: gso_1.out  gso_10.out  gso_100.out  gso_20.out  gso_30.out  gso_40.out  gso_50.out  gso_60.out  gso_70.out  gso_80.out  gso_90.out
example/1czy/: analysis.sh  execution.sh  lig_nm.npy  lightdock_1czy_peptide.pdb.xyz.npy  lightdock_1czy_peptide_mask.npy  lightdock_1czy_protein.pdb.xyz.npy  lightdock_1czy_protein_mask.npy  lightdock_lig.nm.npy  lightdock_rec.nm.npy  rank_by_scoring.list  rec_nm.npy  restraints.list  setup.json  task.list
example/1k4c/: gso_1.out  gso_10.out  gso_100.out  gso_20.out  gso_30.out  gso_40.out  gso_50.out  gso_60.out  gso_70.out  gso_80.out  gso_90.out  setup.json
example/1ppe/: gso_1.out  gso_10.out  gso_100.out  gso_20.out  gso_30.out  gso_40.out  gso_50.out  gso_60.out  gso_70.out  gso_80.out  gso_90.out  setup.json  setup_1ppe.json
example/2uuy/: gso_10.out  gso_100.out  gso_20.out  gso_30.out  gso_40.out  gso_50.out  gso_60.out  gso_70.out  gso_80.out  gso_90.out  lig_nm.npy  rec_nm.npy  setup.json
example/ab_icode/: lightdock_lig.nm.npy  lightdock_rec.nm.npy
src/: constants.rs  dfire.rs  dna.rs  glowworm.rs  lib.rs  pydock.rs  qt.rs  scoring.rs  swarm.rs
(+176 files in other folders)
