[package]
name = "lightdock"
version = "0.3.0"
authors = ["Brian Jimenez Garcia <br.jimenezgarcia@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
pdbtbx = "0.9.2"
lazy_static = "1.4.0"
npy = "0.4.0"
log = "0.4.17"
env_logger = "0.9.0"