[package]
name = "lightdock"
version = "0.3.2"
authors = ["Brian Jimenez Garcia <br.jimenezgarcia@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Macromolecular docking software based on the GSO algorithm"
homepage = "https://lightdock.org"
repository = "https://github.com/lightdock/lightdock-rust"

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
pdbtbx = "0.11.0"
lazy_static = "1.4.0"
npyz = "0.8.3"
log = "0.4.21"
env_logger = "0.11.3"

[lints.clippy]
borrowed_box = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
new_ret_no_self = "allow"
